RESOLVED FIXED193554
A track source should be unmuted whenever reenabled after setDirection changes
https://bugs.webkit.org/show_bug.cgi?id=193554
Summary A track source should be unmuted whenever reenabled after setDirection changes
youenn fablet
Reported 2019-01-17 15:15:01 PST
A track source should be unmuted whenever reenabled after setDirection changes
Attachments
Patch (10.79 KB, patch)
2019-01-17 16:53 PST, youenn fablet
no flags
Radar WebKit Bug Importer
Comment 1 2019-01-17 15:15:28 PST
youenn fablet
Comment 2 2019-01-17 16:53:49 PST
Eric Carlson
Comment 3 2019-01-17 21:15:58 PST
Comment on attachment 359426 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=359426&action=review > LayoutTests/webrtc/video-setDirection.html:100 > + assert_equals(stream, video.srcObject); Why does this fail?
youenn fablet
Comment 4 2019-01-18 08:52:45 PST
(In reply to Eric Carlson from comment #3) > Comment on attachment 359426 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=359426&action=review > > > LayoutTests/webrtc/video-setDirection.html:100 > > + assert_equals(stream, video.srcObject); > > Why does this fail? Libwebrtc tell us that the media stream is gone (through OnRemoveStream) so we remove it and recreate it later on. We should probably keep a weak of the MediaStream instead. If still there, we could then reuse it. Otherwise, recreating a new one would be unobservable.
WebKit Commit Bot
Comment 5 2019-01-18 09:19:31 PST
Comment on attachment 359426 [details] Patch Clearing flags on attachment: 359426 Committed r240152: <https://trac.webkit.org/changeset/240152>
WebKit Commit Bot
Comment 6 2019-01-18 09:19:33 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.